--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -151,7 +151,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="979-Rz-ydy">
-                                <rect key="frame" x="5" y="355" width="404" height="404"/>
+                                <rect key="frame" x="5" y="330" width="404" height="404"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="979-Rz-ydy" secondAttribute="height" multiplier="1:1" id="ROc-aj-26N"/>
@@ -205,7 +205,7 @@
                         <constraints>
                             <constraint firstItem="SSb-fy-LvT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7UC-3i-dmD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="979-Rz-ydy" secondAttribute="trailing" constant="5" id="UkM-iC-RC0"/>
-                            <constraint firstItem="979-Rz-ydy" firstAttribute="top" secondItem="SSb-fy-LvT" secondAttribute="bottom" constant="35" id="Uvt-d7-qs5"/>
+                            <constraint firstItem="979-Rz-ydy" firstAttribute="top" secondItem="SSb-fy-LvT" secondAttribute="bottom" constant="10" id="Uvt-d7-qs5"/>
                             <constraint firstItem="979-Rz-ydy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="XzZ-Sg-sj7"/>
                             <constraint firstItem="SSb-fy-LvT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="g3V-va-9GG"/>
                             <constraint firstItem="SSb-fy-LvT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="50" id="qoX-o0-j5d"/>
@@ -229,7 +229,9 @@
                     <connections>
                         <outlet property="analyzeContainer" destination="8IW-Dx-ber" id="4b8-SC-55A"/>
                         <outlet property="analyzeSenButton" destination="VuL-VD-Cu6" id="4Di-o8-NgH"/>
+                        <outlet property="bannerBottomHeight" destination="tIb-8R-qgm" id="w50-Le-r2s"/>
                         <outlet property="bannerCollectionView" destination="Wqz-Vc-piG" id="rCN-kW-BMY"/>
+                        <outlet property="collectionViewTopHeight" destination="Uvt-d7-qs5" id="EON-Mn-bNQ"/>
                         <outlet property="mainCollectionView" destination="979-Rz-ydy" id="3gN-Bg-I5W"/>
                         <outlet property="searchImage" destination="b2G-x1-C2u" id="vtm-Yu-MSh"/>
                     </connections>
@@ -1508,7 +1510,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="    3분 내에 이메일이 오지 않는다면?     - 스팸 메일함을 확인해주세요.    - 고객센터(070-7778-8688)로 문의해주세요 " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bch-FS-qoM">
-                                <rect key="frame" x="20" y="144" width="374" height="105"/>
+                                <rect key="frame" x="20" y="144" width="374" height="99.5"/>
                                 <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="15"/>
                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -3060,7 +3062,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="홍길동님은 총 50000개의 하트를 모았어요!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJu-ah-Jcb">
-                            <rect key="frame" x="0.0" y="653.5" width="414" height="22.5"/>
+                            <rect key="frame" x="0.0" y="653.5" width="414" height="21"/>
                             <fontDescription key="fontDescription" name="NanumSquareB" family="NanumSquare" pointSize="19"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -4342,36 +4344,49 @@
         <!--Munjang Eight View Controller-->
         <scene sceneID="RDu-BF-QJQ">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kSd-Sa-sgI" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="MunjangEightViewController" id="jPp-1h-hMz" customClass="MunjangEightViewController" customModule="AI_MUNJANG" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4o0-M7-x2X" userLabel="ExampleView">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="illust1" translatesAutoresizingMaskIntoConstraints="NO" id="HJj-lV-LQx">
-                                <rect key="frame" x="177" y="77" width="237" height="140"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="Hw2-DD-w1R"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="꾸준하게 키워가는 나의 문해력" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Du7-hH-7BQ">
-                                <rect key="frame" x="20" y="84" width="198" height="57.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
-                                <color key="textColor" red="0.015686274509803921" green="0.74901960784313726" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vAV-ID-McS" userLabel="ExampleCollection View" customClass="WordCollectionView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="237" width="414" height="639"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WMf-dW-6oK">
+                                <rect key="frame" x="0.0" y="44" width="414" height="170"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="꾸준하게 키워가는 나의 문해력" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Du7-hH-7BQ">
+                                        <rect key="frame" x="20" y="0.0" width="171.5" height="57.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <color key="textColor" red="0.015686274509803921" green="0.74901960784313726" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="illust1" translatesAutoresizingMaskIntoConstraints="NO" id="HJj-lV-LQx">
+                                        <rect key="frame" x="157" y="10" width="237" height="140"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="140" id="Cjg-Aj-x9f"/>
+                                            <constraint firstAttribute="width" constant="237" id="oVU-B5-z62"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="30" minimumInteritemSpacing="10" id="71L-Mj-0oo">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="3GR-xW-Zgj"/>
+                                    <constraint firstAttribute="bottom" secondItem="HJj-lV-LQx" secondAttribute="bottom" constant="20" id="KLK-fp-ffU"/>
+                                    <constraint firstItem="Du7-hH-7BQ" firstAttribute="top" secondItem="WMf-dW-6oK" secondAttribute="top" id="hq3-5e-DQl"/>
+                                    <constraint firstItem="Du7-hH-7BQ" firstAttribute="leading" secondItem="WMf-dW-6oK" secondAttribute="leading" constant="20" id="k2y-Kw-m2c"/>
+                                    <constraint firstAttribute="trailing" secondItem="HJj-lV-LQx" secondAttribute="trailing" constant="20" id="qgP-ui-SRm"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vAV-ID-McS" userLabel="ExampleCollection View" customClass="WordCollectionView" customModule="AI_MUNJANG" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="234" width="414" height="612"/>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="71L-Mj-0oo">
                                     <size key="itemSize" width="180" height="180"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="10" maxX="20" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="dcB-n7-yd0" customClass="SampleCollectionViewCell" customModule="AI_MUNJANG" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="0.0" width="180" height="180"/>
+                                        <rect key="frame" x="20" y="10" width="180" height="180"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hsV-cD-jtR">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
@@ -4411,23 +4426,20 @@
                         <viewLayoutGuide key="safeArea" id="VEM-iG-g2u"/>
                         <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="HJj-lV-LQx" firstAttribute="trailing" secondItem="vAV-ID-McS" secondAttribute="trailing" id="5Cl-Lp-MT3"/>
-                            <constraint firstItem="vAV-ID-McS" firstAttribute="top" secondItem="HJj-lV-LQx" secondAttribute="bottom" constant="20" id="Eh5-oT-yeT"/>
-                            <constraint firstAttribute="bottom" secondItem="vAV-ID-McS" secondAttribute="bottom" constant="20" id="O1G-Cq-FVi"/>
+                            <constraint firstItem="vAV-ID-McS" firstAttribute="top" secondItem="WMf-dW-6oK" secondAttribute="bottom" constant="20" id="DPC-Ad-5xY"/>
+                            <constraint firstAttribute="trailing" secondItem="WMf-dW-6oK" secondAttribute="trailing" id="NTv-wl-kHY"/>
+                            <constraint firstAttribute="bottom" secondItem="vAV-ID-McS" secondAttribute="bottom" constant="50" id="O1G-Cq-FVi"/>
                             <constraint firstItem="vAV-ID-McS" firstAttribute="leading" secondItem="VEM-iG-g2u" secondAttribute="leading" id="Rzj-ew-Rrp"/>
-                            <constraint firstItem="Du7-hH-7BQ" firstAttribute="leading" secondItem="4o0-M7-x2X" secondAttribute="leadingMargin" id="ZKn-y4-not"/>
+                            <constraint firstItem="WMf-dW-6oK" firstAttribute="top" secondItem="VEM-iG-g2u" secondAttribute="top" id="Vfb-Dq-O8o"/>
                             <constraint firstItem="vAV-ID-McS" firstAttribute="trailing" secondItem="VEM-iG-g2u" secondAttribute="trailing" id="efF-t5-77r"/>
-                            <constraint firstItem="HJj-lV-LQx" firstAttribute="top" secondItem="VEM-iG-g2u" secondAttribute="top" constant="33" id="jwG-Vu-z9u"/>
-                            <constraint firstItem="VEM-iG-g2u" firstAttribute="trailing" secondItem="Du7-hH-7BQ" secondAttribute="trailing" constant="196" id="qlD-vx-327"/>
-                            <constraint firstItem="HJj-lV-LQx" firstAttribute="leading" secondItem="VEM-iG-g2u" secondAttribute="leading" constant="177" id="t99-PR-Jem"/>
-                            <constraint firstItem="Du7-hH-7BQ" firstAttribute="top" secondItem="4o0-M7-x2X" secondAttribute="topMargin" constant="40" id="uet-a6-NnE"/>
-                            <constraint firstItem="HJj-lV-LQx" firstAttribute="trailing" secondItem="VEM-iG-g2u" secondAttribute="trailing" id="ykh-LA-7M5"/>
+                            <constraint firstItem="WMf-dW-6oK" firstAttribute="leading" secondItem="4o0-M7-x2X" secondAttribute="leading" id="qXw-Eo-zY9"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="eightCollectionView" destination="vAV-ID-McS" id="TrJ-gA-kQi"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kSd-Sa-sgI" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1594" y="809"/>
         </scene>
@@ -4476,9 +4488,11 @@
         </scene>
     </scenes>
     <designables>
-        <designable name="F7J-g9-Bvd"/>
+        <designable name="F7J-g9-Bvd">
+            <size key="intrinsicContentSize" width="8" height="8"/>
+        </designable>
         <designable name="pVQ-02-xFM">
-            <size key="intrinsicContentSize" width="175.5" height="20.5"/>
+            <size key="intrinsicContentSize" width="191.5" height="28.5"/>
         </designable>
     </designables>
     <resources>
