--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -1561,13 +1561,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- 탈퇴 시 홍길동님의 하트 10개는 모두 삭제되며, 다시 가입해도 복구되지 않습니다.  - 회원 탈퇴와 구독권 해지는 별도로 진행되므로 반드시 회원 탈퇴 전 구독권을 해지해 주세요. " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjB-6a-gAy">
-                                <rect key="frame" x="30" y="116" width="354" height="99.5"/>
+                                <rect key="frame" x="30" y="116" width="354" height="105"/>
                                 <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="15"/>
                                 <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra1-CJ-ull">
-                                <rect key="frame" x="30" y="223.5" width="354" height="40"/>
+                                <rect key="frame" x="30" y="229" width="354" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="tPA-rv-18r"/>
                                 </constraints>
@@ -1581,28 +1581,28 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JtR-Em-mNH" userLabel="border">
-                                <rect key="frame" x="20" y="271.5" width="374" height="1"/>
+                                <rect key="frame" x="20" y="277" width="374" height="1"/>
                                 <color key="backgroundColor" systemColor="systemGray4Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="bch-Sg-tuc"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kQB-Z7-n3C" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="292.5" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="298" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="q6b-eY-z8Q"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L4q-LB-KgU" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="340.5" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="346" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="3jo-f8-BAN"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="탈퇴를 위해 필수 항목에 동의해주세요." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYM-5j-hEi">
-                                <rect key="frame" x="24" y="400.5" width="366" height="30"/>
+                                <rect key="frame" x="24" y="406" width="366" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="FCP-5R-sSr"/>
                                 </constraints>
@@ -1611,7 +1611,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="lhR-9c-njU">
-                                <rect key="frame" x="20" y="458.5" width="374" height="52"/>
+                                <rect key="frame" x="20" y="464" width="374" height="52"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CnR-J9-T0Z">
                                         <rect key="frame" x="0.0" y="0.0" width="179" height="52"/>
@@ -3898,6 +3898,52 @@
             </objects>
             <point key="canvasLocation" x="1717" y="2288"/>
         </scene>
+        <!--Correction View Controller-->
+        <scene sceneID="m6T-hp-KVM">
+            <objects>
+                <viewController storyboardIdentifier="CorrectionViewController" id="etg-rC-zlU" customClass="CorrectionViewController" customModule="AI_MUNJANG" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="icd-rA-4S3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="밑줄 친 부분을 기준으로 문장을 고쳐 써 보시오." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNp-jC-S2e">
+                                <rect key="frame" x="0.0" y="64" width="414" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Tss-oJ-QvY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ot-W2-xeD">
+                                <rect key="frame" x="20" y="172" width="374" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="LaD-DT-cZJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VvQ-ak-evA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Ot-W2-xeD" firstAttribute="leading" secondItem="VvQ-ak-evA" secondAttribute="leading" constant="20" id="3j1-73-qR4"/>
+                            <constraint firstItem="LNp-jC-S2e" firstAttribute="top" secondItem="VvQ-ak-evA" secondAttribute="top" constant="20" id="75d-sx-ffx"/>
+                            <constraint firstItem="LNp-jC-S2e" firstAttribute="leading" secondItem="VvQ-ak-evA" secondAttribute="leading" id="9yE-xH-Jdn"/>
+                            <constraint firstItem="VvQ-ak-evA" firstAttribute="trailing" secondItem="LNp-jC-S2e" secondAttribute="trailing" id="U0l-HL-z4u"/>
+                            <constraint firstItem="6Ot-W2-xeD" firstAttribute="top" secondItem="LNp-jC-S2e" secondAttribute="bottom" constant="8" id="U4E-qO-ieh"/>
+                            <constraint firstItem="VvQ-ak-evA" firstAttribute="trailing" secondItem="6Ot-W2-xeD" secondAttribute="trailing" constant="20" id="zhr-KJ-b7v"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="questionLabel" destination="6Ot-W2-xeD" id="6MO-eX-fHY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZpU-Ph-g7a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2530" y="2396"/>
+        </scene>
         <!--Munhae Test Quiz View Controller-->
         <scene sceneID="aAD-Ye-9YH">
             <objects>
@@ -4577,9 +4623,11 @@
         </scene>
     </scenes>
     <designables>
-        <designable name="F7J-g9-Bvd"/>
+        <designable name="F7J-g9-Bvd">
+            <size key="intrinsicContentSize" width="8" height="8"/>
+        </designable>
         <designable name="pVQ-02-xFM">
-            <size key="intrinsicContentSize" width="175.5" height="20.5"/>
+            <size key="intrinsicContentSize" width="191.5" height="28.5"/>
         </designable>
     </designables>
     <resources>
