1경 그만하기 (1경만 추적하지 않음) 클릭시 오류 수정

--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -4623,6 +4623,9 @@
         </scene>
     </scenes>
     <designables>
+        <designable name="6Ot-W2-xeD">
+            <size key="intrinsicContentSize" width="58" height="28"/>
+        </designable>
         <designable name="F7J-g9-Bvd">
             <size key="intrinsicContentSize" width="8" height="8"/>
         </designable>
